# hyperspharm

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  _config.yml  about.md  clenshaw_curtis.md  gegenbauer.md  hyperspharm.md  index.md  legendre.md  spharm.md
_includes/: head.html  header.html  js_includes.html
_layouts/: default.html
_sass/: hyperspharm.scss
_sass/hyperspharm/: _body.scss  _common.scss  _header.scss
assets/css/: style.scss
ci/: build.sh  coverage.sh  dependencies.sh  run_tests.sh
doc/: Doxyfile
equations/: gegenbauer.py  hyperspharm.py  legendre.py  print_helpers.py  quadrature.py  setup.py
include/: fft.h  gegenbauer.h  hyperspharm.h  legendre.h  spharms.h  types.h  utils.h
src/: benchmark.cpp  fft.cpp  gegenbauer.cpp  hyperspharm.cpp  legendre.cpp  main.cpp  spharms.cpp  utils.cpp
tests/: fft.cpp  legendre.cpp  legendre_array.cpp  spharms.cpp  spherical_surface.cpp  test_gegenbauer.cpp  test_hyperspharm.cpp  test_hyperspherical_harmonics.cpp  test_hyperspherical_surface.cpp  test_legendre.cpp  utils.cpp
